@@ -7,6 +7,7 @@
 	- Make the delay for the "read and interpret" logic of numeric input fields customisable (default 0.5s).
 - Detectors:
 	- Fix Conformal Decals throwing off RCS calculation in editor (SPH/VAB).
+	- Hide scenery during RCS calculation in editor (SPH/VAB) to prevent scenery from affecting calculation.
 	- Add for/aft/side/top/bot RCS readout to the On-Screen Telem debug option when ASPECTED_RCS is enabled.
 	- Add slider for ASPECTED_RCS_OVERALL_RCS_WEIGHT to the BDA Settings menu.
 
